...
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="تایید"
            android:textColor="@color/TextColor"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/accept"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
...
