...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/citySearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <ImageView
                android:layout_width="match_parent"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50" />

                <LinearLayout
                    android:id="@+id/linearLayout_mabda"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@+id/txtOption"
                    android:layout_weight="100"
                    android:gravity="right"
...
                        android:textSize="@dimen/_12dp_normal_textSize"

                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_maghsad"

                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@+id/txtOption"
                    android:layout_weight="100"
...
                android:layout_weight="0.6"


                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_3_flight_dp"
                    android:layout_marginLeft="@dimen/_10dp_margin"
                    android:layout_marginRight="@dimen/_10dp_margin"
                    android:layout_marginTop="1dp"
...


                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/linear_tarikh_az_picker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/linear_picker"
...
                    android:layout_marginLeft="@dimen/_10dp_margin"
                    android:layout_marginRight="@dimen/_10dp_margin"
                    android:background="@drawable/button_shape"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/searchPlan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/search"
...
