<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <View
        android:layout_width="40.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/temp"
        android:visibility="gone"
        android:background="#ffffff"
        />



    <com.eligasht.reservation.views.picker.widget.IRANSansTextView
        android:id="@+id/day"
        android:layout_width="40.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15.0sp" />



</FrameLayout>





