...
        android:gravity="center"
        android:text="ج"
        android:textColor="#ff1369b3"
        app:layout_widthPercent="14.285696%" />

    <com.eligasht.reservation.views.picker.global.utils.CalendarRecyclerView
        android:id="@+id/calendar_rv"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_below="@id/fri"
        android:layout_marginTop="8dp"
        android:background="#ffffffff"
        android:clipChildren="false"
...
