...
        style="@style/MyListFrontContentRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > -->

    <LinearLayout
        android:id="@+id/llCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_linear_row"
        android:orientation="vertical">

        <LinearLayout
...
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/btnSelect"
                android:layout_width="@dimen/_123dp"
                android:layout_height="@dimen/_28dp_f"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/_10dpTabletSize"
                android:layout_marginRight="14dp"
                android:layout_marginTop="10dp"
...
