<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="#ffffff"
    android:id="@+id/llLayout"
    android:gravity="center">

  <LinearLayout
      android:id="@+id/llContentLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
      <TextView
          android:id="@+id/text1"
          android:layout_width="0dp"
          android:layout_weight="5"
          android:layout_height="match_parent"
          android:text="fish name"
          android:gravity="right|center"
          android:textColor="#000000"
          android:textAppearance="@style/IrsansBold"
          android:textSize="@dimen/_14dp_txtSize"/>
      <TextView
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:layout_height="match_parent"
          android:gravity="right"
          android:text="@string/icon_location2"
          android:textAppearance="@style/IconFonts"
          android:textColor="@color/app_base_color"
          android:textSize="@dimen/icon_size_25dp" />



    </LinearLayout>

    </LinearLayout>

  </LinearLayout>