...
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">


            <EditText
                android:id="@+id/searchtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/edittext2"
                android:gravity="center"
...
            fancy:fb_text="@string/RemoveFilter"
            fancy:fb_textColor="#fff"
            fancy:fb_textSize="@dimen/_14dp_txtSize"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_40dp"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:paddingBottom="1dp"
...
